# test_api

./: .dockerignore  .env.template  README.md  development.yml  production.yml  pyproject.toml
.github/workflows/: test_api_workflow.yml
compose/nginx/: nginx.conf
compose/server/: Dockerfile
config/: settings.py  urls.py
src/api/: permissions.py  urls.py  views.py
src/api/serializers/: categories.py  teasers.py  users.py
src/api/swagger/: schemas.py  urls.py
src/bases/: services.py
src/teasers/: admin.py  apps.py  models.py  services.py
src/teasers/migrations/: 0001_initial.py  0002_initial.py  0003_remove_category_index_category_title_and_more.py
src/tests/: conftest.py  test_category.py  test_teasers.py
src/users/: admin.py  apps.py  models.py  signals.py
src/users/migrations/: 0001_initial.py
src/wallets/: admin.py  apps.py  models.py  services.py
src/wallets/migrations/: 0001_initial.py
